# CPP-practic-7.6

./: CMakeLists.txt
Cmake_for_exe/: CMakeLists
Cmake_for_matrixlib/: CMakeLists
matrixlib/: export.h  matrix.h
matrixlib/c/: c_api.cpp  c_api.h
